--- a/frontend/sistema_de_monitoria/src/components/monitoriaResult/monitoriaResult.module.css
+++ b/frontend/sistema_de_monitoria/src/components/monitoriaResult/monitoriaResult.module.css
@@ -9,6 +9,11 @@
     padding: 5px 20px;
 }
 
+.vencida {
+    opacity: 0.75;
+    background-color: rgb(225, 127, 127);
+}
+
 .col {
     display: flex;
     flex-direction: column;
