--- a/frontend/sistema_de_monitoria/src/routes/root.module.css
+++ b/frontend/sistema_de_monitoria/src/routes/root.module.css
@@ -2,8 +2,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
+    max-width: 1280px;
+
+    background-color: white;
 }
 
 .banner {
