--- a/frontend/sistema_de_monitoria/src/components/userResult/userResult.module.css
+++ b/frontend/sistema_de_monitoria/src/components/userResult/userResult.module.css
@@ -1,8 +1,8 @@
 .container {
     display: grid;
-    grid-template-columns: 10% 40% 50%;
-    align-items: center;
-    gap: 40px;
+    grid-template-columns: 1fr 4fr 5fr;
+    column-gap: 10px;
+    align-items: start;
 
     background-color: var(--primary-light-color);
     border-radius: 20px;
@@ -13,6 +13,8 @@
 .avatar {
     height: 75px;
     width: auto;
+    margin: 0;
+    margin-top: 5px;
 }
 
 .col {
@@ -20,6 +22,7 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
+
 }
 
 .colTitulo {
@@ -32,13 +35,25 @@
     margin: 0;
 }
 
-.avaliacaoContainer {
-
-}
-
 .estrela {
     height: 24px;
     width: auto;
 }
 
+.solicitarButton {
+    grid-column: 3;
+
+    background-color: var(--primary-light-color);
+    border-radius: 15px;
+    border: 1px solid black; 
+    font-weight: bold;
+    font-size: 0.8rem;
+
+    width: 70%;
+    max-width: 200px;
+}
+
+.solicitarButton:hover {
+    background-color: var(--primary-dark-color);
+}
 
